--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  publish_archive_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A job to publish Zulip archive in GitHub pages
     steps:
     - name: Checkout
       uses: actions/checkout@v1
@@ -13,6 +13,3 @@ jobs:
       with:
         site: ${{ secrets.site }}
         key: ${{ secrets.key }}
-    # Use the output from the `hello` step
-    - name: Get the output time
-      run: echo "The time was ${{ steps.archive.outputs.time }}"
